@@ -7,8 +7,6 @@ description = "TODO"
 otelJava.moduleName.set("io.opentelemetry.integration.tests.tomcat")
 
 dependencies {
-  api("org.testcontainers:junit-jupiter")
-
   implementation("org.apache.tomcat.embed:tomcat-embed-core:10.1.39")
 }
 
@@ -17,17 +15,8 @@ dependencyCheck {
   skip = true
 }
 
-tasks.withType<Test>().configureEach {
-  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
-  jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
-  jvmArgs("--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED")
-  // jvmArgs("-Djava.util.logging.config.file=/Users/jberg/code/open-telemetry/opentelemetry-java/integration-tests/tomcat/logging.properties")
-
-  // environment("CATALINA_OUT", "/Users/jberg/code/open-telemetry/opentelemetry-java/integration-tests/tomcat/base/logs")
-}
-
 application {
-  mainClass = "io.opentelemetry.integrationtests.tomcat.MemoryLeakTest"
+  mainClass = "io.opentelemetry.integrationtests.tomcat.Tomcat"
   applicationDefaultJvmArgs = listOf(
     "--add-opens=java.base/java.lang=ALL-UNNAMED",
     "--add-opens=java.base/java.io=ALL-UNNAMED",
